# cubage

./: CMakeLists.txt  README.md  array_arithmetic.hpp  box_region.hpp  c_cpp_properties.json  gauss_kronrod.hpp  genz_malik.hpp  integral_result.hpp  interval_region.hpp  multi_integrator.hpp  partition.hpp  vector_math.hpp
benchmarks/: Makefile  benchmark_genz_malik  benchmark_genz_malik.cpp  callgrind.out.896  callgrind.out.927  gmon.out
cmake/: config.cmake.in
examples/: example_2d  example_2d.cpp  exampled_1d.cpp
include/: box_region.hpp  gauss_kronrod.hpp  gauss_kronrod_data.hpp  genz_malik.hpp  integral_result.hpp  interval_region.hpp  multi_integrator.hpp
tests/: Makefile  test_cubage  test_cubage.cpp  test_gauss_kronrod  test_gauss_kronrod.cpp  test_genz_malik  test_genz_malik.cpp  test_muqu
